# TestDemo

./: README.md  build.gradle  settings.gradle  wei.jks
app/: .gitignore  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  my-opencv.cpp  my-test.cpp  native-lib.cpp
app/src/main/cpp/src/: my-ffmpeg1.cpp  my-test.cpp  my_ffmpeg_audio.cpp  my_ffmpeg_audio_deprecated.cpp  my_ffmpeg_video.cpp
app/src/main/cpp/src/music_player/: AndroidLog.cpp  AndroidLog.h  MNAudio.cpp  MNAudio.h  MNCallJava.cpp  MNCallJava.h  MNFFmpeg.cpp  MNFFmpeg.h  MNPlaystatus.cpp  MNPlaystatus.h  MNQueue.cpp  MNQueue.h  my_music_player.cpp
app/src/main/cpp/src/test/include/: A.h  test.h  test1.h
app/src/main/cpp/src/test/test/: A.cpp  test.cpp  test1.cpp
app/src/main/cpp/src/test/test_temp/: A.cpp  A.h  B.cpp  B.h  C.cpp  C.h
app/src/main/cpp/src/video_player/: MyAudio.cpp  MyAudio.h  MyCallJava.cpp  MyCallJava.h  MyFFmpeg.cpp  MyFFmpeg.h  MyPlaystatus.cpp  MyPlaystatus.h  MyQueue.cpp  MyQueue.h  MyVideo.cpp  MyVideo.h  my_video_player.cpp
app/src/main/java/com/wcl/testdemo/adapter/: TestAdapter.java
app/src/main/java/com/wcl/testdemo/api/: ApiCallback.java  ApiManager.java  ApiResponse.java  ApiService.java
app/src/main/java/com/wcl/testdemo/api/bean/request/: MarkRequest.java
app/src/main/java/com/wcl/testdemo/api/bean/response/: ApkUpgrade.java  MarkResponse.java
app/src/main/java/com/wcl/testdemo/api/utils/: ApiErrorHelper.java
app/src/main/java/com/wcl/testdemo/bean/: TestBean.java
app/src/main/java/com/wcl/testdemo/bean/eventbus/: EventLogon.java  EventLogout.java
app/src/main/java/com/wcl/testdemo/constant/: Host.java  SPKeys.java
app/src/main/java/com/wcl/testdemo/init/: AppApplication.java  BaseActivity.java  CricketActivity.java  SplashActivity.java  TestActivity.java  TestAdapter.java  TestBean.java
app/src/main/java/com/wcl/testdemo/push/: PushMessageService.java  PushService.java
app/src/main/java/com/wcl/testdemo/test/test00_javabase/: JavaBaseActivity.java
app/src/main/java/com/wcl/testdemo/test/test00_javabase/activity/: JavaBaseActivity.java
app/src/main/java/com/wcl/testdemo/test/test00_javabase/test00/: JsonTestActivity.java
app/src/main/java/com/wcl/testdemo/test/test00_javabase/test01/: CacheTestActivity.java
app/src/main/java/com/wcl/testdemo/test/test00_javabase/test02/: SocketClientActivity.java  SocketServiceActivity.java  SocketTestActivity.java
app/src/main/java/com/wcl/testdemo/test/test00_javabase/test03/: EncryptDecryptTestActivity.java
app/src/main/java/com/wcl/testdemo/test/test01_androidbase/: AndroidBaseActivity.java
app/src/main/java/com/wcl/testdemo/test/test01_androidbase/activity/: AndroidBaseActivity.java
app/src/main/java/com/wcl/testdemo/test/test01_androidbase/test03/: SaveFileActivity.java
app/src/main/java/com/wcl/testdemo/test/test01_androidbase/test08/: DialogTestActivity.java
app/src/main/java/com/wcl/testdemo/test/test02_4components/: TestComponentsActivity.java
app/src/main/java/com/wcl/testdemo/test/test02_4components/activity/: TestComponentsActivity.java
app/src/main/java/com/wcl/testdemo/test/test02_4components/test00/: IDoInBackground.java  MyService.java  ServiceTestActivity.java
app/src/main/java/com/wcl/testdemo/test/test03_view/: TestViewActivity.java
app/src/main/java/com/wcl/testdemo/test/test04_device/: TestDeviceActivity.java
app/src/main/java/com/wcl/testdemo/test/test05_library/: TestLibraryActivity.java
app/src/main/java/com/wcl/testdemo/test/test06_audio_video/: TestAudioAndVideoActivity.java
app/src/main/java/com/wcl/testdemo/utils/: FileUtils.java  FindIpUtils.java  JsonConfig.java  MyAppUtils.java  MyTestNativeUtils.java  OpenGLUtils.java  ScreenUtils.java  YuvUtils.java
app/src/main/java/com/wcl/testdemo/utils/dialog/: MyDialogFragment.java
app/src/main/res-black/mipmap-anydpi-v26/: ic_launcher_black.xml
app/src/main/res-black/values/: colors.xml  dimens.xml
app/src/main/res/anim/: anim_splash_bg.xml  anim_splash_camera.xml
app/src/main/res/drawable/: anim_frame_splash_tm.xml  record_button_background.xml  record_speed_background.xml  record_speed_button_background.xml  selector_rectangle_blue_to_gray.xml  selector_rectangle_white_to_999.xml  shape_rectangle_blue_45a6fd.xml  shape_rectangle_gray_999.xml
app/src/main/res/layout/: activity_android_base.xml  activity_cache_test.xml  activity_camera.xml  activity_camerax.xml  activity_cricket.xml  activity_custom_view_test.xml  activity_dialog_test.xml  activity_encrypt_decrypt_test.xml  activity_event_bus_test.xml  activity_face_recognition.xml  activity_ffmpeg_test.xml  activity_glsurface_view.xml  activity_java_base.xml  activity_json_test.xml  activity_music_player.xml  activity_open_cv_test.xml  activity_open_gl_test.xml  activity_opengl_record.xml  activity_play_audio.xml  activity_play_video.xml  activity_retrofit_test.xml  activity_save_file.xml  activity_screen_theme.xml  activity_service_test.xml  activity_socket_service.xml  activity_socket_test.xml  activity_splash.xml  activity_test.xml  activity_test_audio_and_video.xml  activity_test_device.xml  activity_test_library.xml  activity_test_toggle_button.xml  activity_test_view.xml  activity_tp.xml  activity_tp_client.xml  activity_video_chat.xml  activity_video_player.xml  dialog_tips.xml  item_recycler_view_image.xml  item_recycler_view_text.xml  (+2 more)
app/src/main/res/raw/: base_frag.frag  base_vert.vert  beauty_frag.frag  beauty_fragment2.glsl  camera_frag.frag  camera_frag1.frag  camera_frag2.frag  camera_frag3.frag  camera_frag4.frag  camera_frag5.frag  camera_vert.vert  fragment_shader.glsl  soul_frag.frag  split2_screen.frag  split3_screen.frag
app/src/main/res/values/: attrs.xml  colors.xml  dimens.xml  strings.xml  styles.xml  themes.xml
gradle/wrapper/: gradle-wrapper.properties
testCreateJarlibrary/: build.gradle
testCreateJarlibrary/src/main/: AndroidManifest.xml
testCreateJarlibrary/src/main/java/com/wcl/testcreatejarlibrary/: Utils.java
(+95 files in other folders)
